--- a/src/css/contact_uk.css
+++ b/src/css/contact_uk.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins:300,500,600,700,800');
+@import url('https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800');
 @import './nav.css';
 
 .hero {
@@ -70,11 +70,17 @@
   width: 260px;
   padding: 10px 0;
   display: block;
+  transition: all 0.1s;
 }
 
 .contact__link:hover {
   border-color: rgba(25, 184, 233, .8);
   color: rgba(0, 0, 0, .7);
+}
+
+.contact__link:active {
+  bottom: -1px;
+  position: relative;
 }
 
 @media screen and (max-width: 768px) {
