--- a/src/css/contact_uk.css
+++ b/src/css/contact_uk.css
@@ -2,8 +2,18 @@
 @import './nav.css';
 
 .hero {
-  background: url(../images/contact/contact-bg.jpg) center no-repeat;
+  background-position: center;
   background-size: cover;
+  background-repeat: no-repeat;
+  background-image: url(../images/contact/contact-bg.jpg);
+  background-image: -webkit-image-set(
+    url(../images/contact/contact-bg.jpg) 1x,
+    url(../images/contact/contact-bg@2x.jpg) 2x
+  );
+  background-image: image-set(
+    url(../images/contact/contact-bg.jpg) 1x,
+    url(../images/contact/contact-bg@2x.jpg) 2x
+  );
   width: 100%;
 }
 
@@ -85,6 +95,7 @@
 
 @media screen and (max-width: 768px) {
   .hero__title {
+    text-align: center;
     font-size: 50px;
     padding: 150px 0 205px;
   }
