--- a/src/css/home_uk.css
+++ b/src/css/home_uk.css
@@ -3,15 +3,24 @@
 
 .banner-wrap {
   min-height: 250px;
-  background: url(../images/home_bg.jpg) no-repeat;
+  background-repeat: no-repeat;
   background-size: cover;
+  background-image: url(../images/home_bg.jpg);
+  background-image: -webkit-image-set(
+    url(../images/home_bg.jpg) 1x,
+    url(../images/home_bg@2x.jpg) 2x
+  );
+  background-image: image-set(
+    url(../images/home_bg.jpg) 1x,
+    url(../images/home_bg@2x.jpg) 2x
+  );
 }
 
 .banner {
   display: flex;
-  justify-content: flex-end;
+  justify-content: flex-start;
   align-items: center;
-  padding: 115px 0;
+  padding: 115px 15px;
   min-height: 520px;
 }
 
@@ -25,10 +34,9 @@
   width: 100%;
   text-align: left;
   font-weight: 800;
-  font-size: 58px;
-  line-height: 85px;
+  font-size: 60px;
+  line-height: 75px;
   color: #fff;
-  margin-bottom: 65px;
   letter-spacing: 3px;
 }
 
@@ -259,7 +267,7 @@
 
 .feedback_btn_block_link:hover {
   background: rgba(155, 255, 190, 0.8);
-  color: rgba(0, 0, 0, .7);
+  color: rgba(0, 0, 0, 0.7);
 }
 
 .feedback_btn_block_link:active {
