--- a/src/css/business_uk.css
+++ b/src/css/business_uk.css
@@ -21,7 +21,7 @@
 
 .btn-primary:hover {
   background: rgba(155, 255, 190, 0.8);
-  color: rgba(0, 0, 0, .7);
+  color: rgba(0, 0, 0, 0.7);
 }
 
 .btn-primary:active {
@@ -54,7 +54,7 @@
   top: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0,0,0,0.1);
+  background-color: rgba(0, 0, 0, 0.1);
 }
 
 .introduction-desc {
@@ -92,7 +92,7 @@
   margin: 0 auto;
   position: relative;
   z-index: 1;
-  color: #3B455A;
+  color: #3b455a;
   text-align: center;
 }
 
@@ -139,11 +139,11 @@
 }
 
 .whatCanWeDo-section_1 {
-  background-color: #3C465A;
+  background-color: #3c465a;
 }
 
 .whatCanWeDo-section_2 {
-  background-color: #179ECF;
+  background-color: #179ecf;
 }
 
 .whatCanWeDo-title {
@@ -155,7 +155,7 @@
 
 .whatCanWeDo-title--row {
   padding-bottom: 85px;
-} 
+}
 
 .whatCanWeDo-item {
   max-width: 674px;
@@ -202,7 +202,7 @@
 .readyToChat-title {
   font-size: 35px;
   font-weight: 600;
-  color: #3C465A;
+  color: #3c465a;
   margin: 0 97px 20px 0;
   white-space: nowrap;
 }
