--- a/src/css/home_uk.css
+++ b/src/css/home_uk.css
@@ -218,9 +218,9 @@
 }
 
 .feedback_text {
+  display: block;
   font-size: 25px;
   line-height: 40px;
-  padding-bottom: 25px;
   max-width: 768px;
 }
 
@@ -228,10 +228,15 @@
   min-height: 230px;
 }
 
+.feedback_text--signup {
+  cursor: pointer;
+  line-height: initial;
+  margin-bottom: 55px;
+}
+
 .feedback_input {
-  outline: none;
   font-size: 20px;
-  margin: 30px 0 70px;
+  margin: 0 0 70px;
   padding: 4px 45px;
   min-width: 500px;
   border: none;
@@ -338,6 +343,11 @@
   .feedback__Interested,
   .feedback_text--height {
     min-height: initial;
+    padding-bottom: 25px;
+  }
+
+  .feedback_text--signup {
+    margin-bottom: 0;
   }
 
   .feedback_title {
