fix footer links margin for mobile screen

--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -505,6 +505,10 @@ footer .copyright {
   }
   .nav-footer .footer-nav-list li {
     margin-right: 0;
+    margin-bottom: 20px;
+  }
+  .nav-footer .footer-nav-list li:last-child {
+    margin-bottom: 0;
   }
 }
 
