--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -517,13 +517,6 @@ footer .copyright {
   margin: 0 auto;
 }
 
-.block-child-wrap {
-  width: 100%;
-  max-width: 1380px;
-  padding: 0 15px;
-  margin: 0 auto;
-}
-
 .cookie-popup {
   display: none;
   position: fixed;
@@ -582,3 +575,39 @@ footer .copyright {
   bottom: -1px;
   position: relative;
 }
+
+/* Layout */
+@media (min-width: 1650px) {
+  .block-child-wrap {
+    width: 100%;
+    max-width: 1650px;
+    padding: 0 15px;
+    margin: 0 auto;
+  }
+}
+
+@media (min-width: 1280px) and (max-width: 1650px) {
+  .block-child-wrap {
+    width: 100%;
+    max-width: 1280px;
+    padding: 0 15px;
+    margin: 0 auto;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1280px) {
+  .block-child-wrap {
+    width: 100%;
+    max-width: 1024px;
+    padding: 0 35px;
+    margin: 0 auto;
+  }
+}
+
+@media (max-width: 768px) {
+  .block-child-wrap {
+    width: 100%;
+    padding: 0 15px;
+  }
+}
+
