--- a/src/css/legal.css
+++ b/src/css/legal.css
@@ -3,7 +3,7 @@ body {background-color: #fff;}
 .heroHelpContainer {
     margin: 0;
     position: relative;
-    background: url(../images/helpHero.jpg);
+    background: url(../images/new/legal.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
