--- a/src/css/business_uk.css
+++ b/src/css/business_uk.css
@@ -35,16 +35,16 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  background-image: url(../images/business_bg.jpg);
+  background-image: url(../images/new/business.jpg);
   background-image: -webkit-image-set(
-    url(../images/business_bg.jpg) 1x,
-    url(../images/business_bg@2x.jpg) 2x
+    url(../images/new/business.jpg) 1x,
+    url(../images/new/business.jpg) 2x
   );
   background-image: image-set(
-    url(../images/business_bg.jpg) 1x,
-    url(../images/business_bg@2x.jpg) 2x
+    url(../images/new/business.jpg) 1x,
+    url(../images/new/business.jpg) 2x
   );
-  padding: 190px 0;
+   min-height: 50vh;
 }
 
 .introduction-wrap::after {
@@ -63,6 +63,7 @@
   line-height: 70px;
   color: #fff;
   letter-spacing: 3px;
+  padding: 25vh 0;
 }
 /*...end introduction...*/
 
