--- a/src/css/contact_uk.css
+++ b/src/css/contact_uk.css
@@ -1,27 +1,28 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800');
-@import './nav.css';
+@import url("https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800");
+@import "./nav.css";
 
 .hero {
-  background-position: center;
+  background-position: center -5vh;
   background-size: cover;
   background-repeat: no-repeat;
-  background-image: url(../images/contact/contact-bg.jpg);
+  background-image: url(../images/new/contact.jpg);
   background-image: -webkit-image-set(
-    url(../images/contact/contact-bg.jpg) 1x,
-    url(../images/contact/contact-bg@2x.jpg) 2x
+    url(../images/new/contact.jpg) 1x,
+    url(../images/new/contact.jpg) 2x
   );
   background-image: image-set(
-    url(../images/contact/contact-bg.jpg) 1x,
-    url(../images/contact/contact-bg@2x.jpg) 2x
+    url(../images/new/contact.jpg) 1x,
+    url(../images/new/contact.jpg) 2x
   );
-  width: 100%;
+  width: 100%; 
+   min-height: 50vh;
 }
 
 .hero__title {
   color: #fff;
   font-weight: 800;
   font-size: 70px;
-  padding: 180px 0 235px;
+  padding: 25vh 0;
 }
 
 .contact__wrapper {
