--- a/src/css/gdpr.css
+++ b/src/css/gdpr.css
@@ -1,154 +1,160 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800');
-@import './nav.css';
+@import url("https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800");
+@import "./nav.css";
 
 .hero {
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-image: url(../images/legal.jpg);
-    background-image: -webkit-image-set(url(../images/legal.jpg) 1x,
-            url(../images/legal.jpg) 2x);
-    background-image: image-set(url(../images/legal.jpg) 1x,
-            url(../images/legal.jpg) 2x);
-    width: 100%; 
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: url(../images/new/legal.jpg);
+  background-image: -webkit-image-set(
+    url(../images/new/legal.jpg) 1x,
+    url(../images/new/legal.jpg) 2x
+  );
+  background-image: image-set(
+    url(../images/new/legal.jpg) 1x,
+    url(../images/new/legal.jpg) 2x
+  );
+  background-position-y: bottom;
+  width: 100%;
 }
-p, li, a {
-    font-size: 19px;
+p,
+li,
+a {
+  font-size: 19px;
 }
 .title {
-    font-size: 35px;
-    font-weight: 600;
-    margin-bottom: 30px;
+  font-size: 35px;
+  font-weight: 600;
+  margin-bottom: 30px;
 }
 
 .hero__title {
-    color: #fff;
-    font-weight: 800;
-    font-size: 70px;
-    padding: 20vh 0;
+  color: #fff;
+  font-weight: 800;
+  font-size: 70px;
+  padding: 25vh 0;
 }
 
 .text-center {
-    text-align: center;
-} 
+  text-align: center;
+}
 .legal-list li a {
-    color: #1cb0e6;
-    text-decoration: underline;
-    padding: 5px 0;
+  color: #1cb0e6;
+  text-decoration: underline;
+  padding: 5px 0;
 }
 
 .contact__wrapper {
-    max-width: 1089px;
-    padding: 90px 15px 100px;
-    margin: 0 auto;
-    text-align: center;
+  max-width: 1089px;
+  padding: 90px 15px 100px;
+  margin: 0 auto;
+  text-align: center;
 }
 
 .contact__title {
-    font-weight: 700;
-    font-size: 35px;
-    padding-bottom: 50px;
+  font-weight: 700;
+  font-size: 35px;
+  padding-bottom: 50px;
 }
 
 .contact__container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-column-gap: 115px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-column-gap: 115px;
 }
 
 .contact__mail {
-    justify-self: end;
+  justify-self: end;
 }
 
 .contact__phone {
-    justify-self: start;
+  justify-self: start;
 }
 
 .contact__img--mail {
-    padding-top: 10px;
+  padding-top: 10px;
 }
 
 .contact__subtitle {
-    font-weight: 600;
-    font-size: 30px;
+  font-weight: 600;
+  font-size: 30px;
 }
 
 .contact__subtitle--mail {
-    padding-top: 8px;
+  padding-top: 8px;
 }
 
 .contact__text {
-    font-weight: 300;
-    font-size: 20px;
-    line-height: 25px;
-    max-width: 260px;
-    margin: 0 auto;
-    padding-bottom: 30px;
+  font-weight: 300;
+  font-size: 20px;
+  line-height: 25px;
+  max-width: 260px;
+  margin: 0 auto;
+  padding-bottom: 30px;
 }
 
 .contact__link {
-    font-size: 17px;
-    border: 3px solid #19b8e9;
-    border-radius: 10px;
-    width: 260px;
-    padding: 10px 0;
-    display: block;
-    transition: all 0.1s;
+  font-size: 17px;
+  border: 3px solid #19b8e9;
+  border-radius: 10px;
+  width: 260px;
+  padding: 10px 0;
+  display: block;
+  transition: all 0.1s;
 }
 
 .content {
-    padding: 10vh 0;
-    min-height: 60vh;
+  padding: 10vh 0;
+  min-height: 60vh;
 }
 .contact__link:hover {
-    border-color: rgba(25, 184, 233, 0.8);
-    color: rgba(0, 0, 0, 0.7);
+  border-color: rgba(25, 184, 233, 0.8);
+  color: rgba(0, 0, 0, 0.7);
 }
 
 .contact__link:active {
-    bottom: -1px;
-    position: relative;
+  bottom: -1px;
+  position: relative;
 }
 
 .gdpr {
-    display: block;
-    margin: 5vh 0;
+  display: block;
+  margin: 5vh 0;
 }
 
 .gdpr tbody tr th {
-    text-align: left;
-    height: 2rem;
-    padding: 20px !important;
-    text-transform: uppercase;
+  text-align: left;
+  height: 2rem;
+  padding: 20px !important;
+  text-transform: uppercase;
 }
 
-
 .gdpr tbody tr td a {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 .gdpr tbody tr td {
-    padding: 20px !important;
+  padding: 20px !important;
 }
 
 @media screen and (max-width: 768px) {
-    .gdpr tbody tr td {
-        text-align: center;
-    }
+  .gdpr tbody tr td {
+    text-align: center;
+  }
 
-    .hero__title {
-        text-align: center;
-        font-size: 50px;
-        padding: 20vh 0;
-    }
+  .hero__title {
+    text-align: center;
+    font-size: 50px;
+    padding: 20vh 0;
+  }
 
-    .contact__container {
-        grid-template-columns: 1fr;
-        grid-row-gap: 50px;
-    }
+  .contact__container {
+    grid-template-columns: 1fr;
+    grid-row-gap: 50px;
+  }
 
-    .contact__mail,
-    .contact__phone {
-        justify-self: center;
-    }
+  .contact__mail,
+  .contact__phone {
+    justify-self: center;
+  }
 }
