--- a/src/css/get-in-touch_uk.css
+++ b/src/css/get-in-touch_uk.css
@@ -1,22 +1,22 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins:300,400,500,500i,600,800');
-@import './nav.css';
+@import url("https://fonts.googleapis.com/css?family=Poppins:300,400,500,500i,600,800");
+@import "./nav.css";
 
 .hero {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  background-image: url(../images/get-in-touch/get-in-touch-bg.jpg);
+  background-image: url(../images/new/get-in-touch.jpg);
   background-image: -webkit-image-set(
-    url(../images/get-in-touch/get-in-touch-bg.jpg) 1x,
-    url(../images/get-in-touch/get-in-touch-bg@2x.jpg) 2x
+    url(../images/new/get-in-touch.jpg) 1x,
+    url(../images/new/get-in-touch.jpg) 2x
   );
   background-image: image-set(
-    url(../images/get-in-touch/get-in-touch-bg.jpg) 1x,
-    url(../images/get-in-touch/get-in-touch-bg@2x.jpg) 2x
+    url(../images/new/get-in-touch.jpg) 1x,
+    url(../images/new/get-in-touch.jpg) 2x
   );
   width: 100%;
   color: #fff;
-  padding: 190px 0;
+   min-height: 50vh;
 }
 
 .hero__title {
@@ -24,7 +24,9 @@
   font-size: 55px;
   padding-bottom: 10px;
 }
-
+.hero-text{
+  padding: 25vh 0;
+}
 .hero__subtitle {
   font-weight: 500;
   font-size: 30px;
@@ -52,7 +54,7 @@
 }
 
 .form__label--select::after {
-  content: '';
+  content: "";
   background-image: url(../images/get-in-touch/form-select-arrow.svg);
   width: 18px;
   height: 16px;
@@ -138,7 +140,7 @@
   .hero__title {
     font-size: 44px;
   }
-  
+
   .hero__subtitle {
     font-size: 25px;
   }
