--- a/src/css/contact_uk.css
+++ b/src/css/contact_uk.css
@@ -2,8 +2,8 @@
 @import "./nav.css";
 
 .hero {
-  background-position: center -5vh;
-  background-size: cover;
+  background-position: center -20vh;
+  background-size: 100% auto;
   background-repeat: no-repeat;
   background-image: url(../images/new/contact.jpg);
   background-image: -webkit-image-set(
@@ -14,8 +14,8 @@
     url(../images/new/contact.jpg) 1x,
     url(../images/new/contact.jpg) 2x
   );
-  width: 100%; 
-   min-height: 50vh;
+  width: 100%;
+  min-height: 50vh;
 }
 
 .hero__title {
@@ -109,5 +109,9 @@
   .contact__mail,
   .contact__phone {
     justify-self: center;
+  }
+  .hero {
+    background-position: center center;
+    background-size: cover;
   }
 }
