--- a/src/css/legal_uk.css
+++ b/src/css/legal_uk.css
@@ -14,7 +14,7 @@
     url(../images/new/legal.jpg) 1x,
     url(../images/new/legal.jpg) 2x
   );
-  background-position-y: bottom;
+  background-position-y: -47.5vh;
   width: 100%;
 }
 p,
@@ -89,5 +89,11 @@ a {
     text-align: center;
     font-size: 50px;
     padding: 15vh 0;
+  }
+}
+
+@media screen and (max-width: 578px) {
+  .hero {
+    background-position-y: bottom;
   }
 }
