added S3 flags for .css files

--- a/src/css/business_uk.css
+++ b/src/css/business_uk.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,800");
-@import "./nav.css";
+@import "./nav.css?20190516";
 
 .btn-primary {
   font-size: 20px;
