--- a/src/css/home_uk.css
+++ b/src/css/home_uk.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Poppins:300,300i,400,500,600,700,800");
-@import "./nav.css";
+@import "./nav.css?20190516";
 
 .banner-wrap {
   min-height: 250px;
